--- a/bank/src/main/resources/application.properties
+++ b/bank/src/main/resources/application.properties
@@ -1,9 +1,16 @@
 spring.application.name=bank
 
 
+spring.r2dbc.url=r2dbc:h2:mem:///testdb
+spring.r2dbc.username=sa
+spring.r2dbc.password=password
+spring.r2dbc.generate-unique-name=true
+
+spring.h2.console.enabled=true
+spring.h2.console.path=/h2-console
+
 spring.datasource.url=jdbc:h2:mem:testdb
 spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=sa
 spring.datasource.password=password
-spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
-spring.h2.console.enabled=true
+spring.datasource.generate-unique-name=true
